# msvclib

./: .appveyor.yml  COPYING.MSVCLIB  ChangeLog  MAINTAINERS  Makefile  Makefile.def  Makefile.in  Makefile.tpl  config-ml.in  config.sub  configure  configure.ac  ltmain.sh
.github/workflows/: cygwin.yml
config/: ChangeLog
libgloss/: ChangeLog-2015  syscall.h
libgloss/aarch64/: crt0.S  elf-aem-v8-r.specs  elf-aem-validation.specs  elf-aem-ve.specs  elf-rdimon.specs
libgloss/aarch64/cpu-init/: rdimon-aem-el3.S
libgloss/arc/: Makefile.in  crt0.S  nsim-syscalls.c
libgloss/arm/: Makefile.in  coff-rdimon-v2m.specs  coff-rdimon.specs  configure  configure.ac  crt0.S  elf-aprofile-validation-v2m.specs  elf-aprofile-validation.specs  elf-aprofile-ve-v2m.specs  elf-aprofile-ve.specs  elf-nano.specs  elf-rdimon-v2m.specs  elf-rdimon.specs  syscall.h
libgloss/config/: default.mh  default.mt  dos.mh  mips.mt  ppc.mh
libgloss/cris/: Makefile.in  crt0.S  gensyscalls  lcrt0.c  linunistd.h
libgloss/csky/: Makefile.in
libgloss/doc/: porting.texi
libgloss/epiphany/: Makefile.in
libgloss/hp74x/: Makefile.in
libgloss/i960/: mon960.c  syscall.h
libgloss/iq2000/: Makefile.in
libgloss/libnosys/: configure.ac
libgloss/m32c/: sample.c
libgloss/mips/: Makefile.in
libgloss/mn10200/: Makefile.in
libgloss/mn10300/: Makefile.in
libgloss/nios2/: qemu-hosted.ld
libgloss/or1k/: crt0.S
libgloss/or1k/include/: or1k-support.h
libgloss/pru/: crt0.S  syscalls.S
libgloss/riscv/: crt0.S  nano.specs  sys_conv_stat.c  sys_execve.c  sys_fork.c  sys_isatty.c  sys_sbrk.c  sys_times.c
libgloss/rs6000/: sim-times.c  sol-cfuncs.c
libgloss/sparc/libsys/: Makefile.in  syscall.h
libgloss/sparc_leon/: Makefile.in  kernel_debug.c  kernel_thread.c
libgloss/sparc_leon/asm-leon/: leonbare_kernel.h
libgloss/spu/: Makefile.in  conv_stat.c
libgloss/testsuite/config/: support.c
libgloss/xstormy16/: sim_malloc_start.s
msvclib/: ChangeLog-2015  HOWTO  MAINTAINERS  Makefile.am  Makefile.in  NEWS  README  _msvclib_version.hin  acconfig.h  acinclude.m4  configure  configure.ac  configure.host  msvclib.hin
msvclib/doc/: Makefile.am  Makefile.in  configure  configure.ac
msvclib/iconvdata/: Makefile.am  Makefile.in  configure  configure.ac
msvclib/libc/: Makefile.am  Makefile.in  configure  configure.ac  libc.in.xml  libc.texinfo  sys.tex
msvclib/libc/argz/: Makefile.am  Makefile.in
msvclib/libc/ctype/: Makefile.am  Makefile.in  jp2uc.c  mkunidata  towlower_l.c  towupper.c
msvclib/libc/errno/: Makefile.am  Makefile.in
msvclib/libc/iconv/: Makefile.am  Makefile.in  iconv.tex
msvclib/libc/include/: _ansi.h  _msvclib_version.h  alloca.h  argz.h  ctype.h  dirent.h  envz.h  getopt.h  inttypes.h  limits.h  locale.h  math.h  ndbm.h  reent.h  stdio.h
msvclib/libc/locale/: Makefile.am  Makefile.in  duplocale.c  freelocale.c  locale.c  localeconv.c  newlocale.c  setlocale.h  uselocale.c
msvclib/libc/machine/: Makefile.am  Makefile.in  configure  configure.ac
msvclib/libc/machine/arc/: Makefile.am  Makefile.in  asm.h  configure.ac  memcmp-bs-norm.S  memcmp.S  memcpy-archs.S  memcpy-bs.S  memcpy.S  memset-archs.S  memset-bs.S  memset.S  strchr-bs-norm.S  strchr-bs.S  strchr.S  strcmp-archs.S  strcmp.S  strcpy-bs-arc600.S  strcpy-bs.S  strcpy.S  strlen-bs-norm.S  strlen-bs.S  strlen.S  strncpy-bs.S  strncpy.S
msvclib/libc/machine/h8500/: Makefile.am  Makefile.in  configure  configure.ac
msvclib/libc/machine/lm32/: Makefile.am  Makefile.in  configure.ac
msvclib/libc/machine/riscv/: Makefile.am  Makefile.in  configure  configure.ac
msvclib/libc/machine/sh/: Makefile.am  Makefile.in  configure  configure.ac
msvclib/libc/machine/spu/: Makefile.am  Makefile.in  assert.c  c99ppe.h  configure  configure.ac
msvclib/libc/machine/spu/sys/: errno.h
msvclib/libc/misc/: Makefile.am  Makefile.in  __dprintf.c  lock.c
msvclib/libc/posix/: Makefile.am  Makefile.in
msvclib/libc/reent/: Makefile.am  Makefile.in  reent.tex
msvclib/libc/search/: Makefile.am  Makefile.in  hash.h
msvclib/libc/signal/: Makefile.am  Makefile.in
msvclib/libc/ssp/: Makefile.am  Makefile.in  gets_chk.c
msvclib/libc/stdio/: Makefile.am  Makefile.in  clearerr.c  fclose.c  fdopen.c  feof.c  ferror.c  fflush.c  fgetc.c  fgets.c  fgetwc.c  fgetws.c  fileno.c  findfp.c  fmemopen.c  fopen.c  fopencookie.c  fpurge.c  fputc.c  fputs.c  fputwc.c  fputws.c  fread.c  freopen.c  fseeko.c  ftello.c  funopen.c  fwide.c  fwrite.c  getc.c  getdelim.c  gets.c  local.h  nano-vfprintf.c  nano-vfprintf_float.c  nano-vfprintf_i.c  nano-vfscanf.c  nano-vfscanf_float.c  nano-vfscanf_i.c  nano-vfscanf_local.h  (+21 more)
msvclib/libc/stdio64/: Makefile.am  Makefile.in  fdopen64.c  fopen64.c  freopen64.c  fseeko64.c  ftello64.c
msvclib/libc/stdlib/: Makefile.am  Makefile.in  __atexit.c  arc4random.h  dtoastub.c  eprintf.c  gdtoa-hexnan.c  getenv_r.c  getopt.c  ldtoa.c  mallocr.c  mblen.c  (+18 more)
msvclib/libc/sys/a29khif/: Makefile.am  Makefile.in  configure  configure.ac
msvclib/libc/sys/phoenix/: Makefile.am  Makefile.in  configure  configure.ac
msvclib/libc/sys/phoenix/machine/: Makefile.am  Makefile.in  configure  configure.ac
msvclib/libc/sys/phoenix/machine/arm/: Makefile.am  Makefile.in  configure  configure.ac
msvclib/libc/sys/tic80/: Makefile.am  Makefile.in  configure  configure.ac
msvclib/libm/: Makefile.am  Makefile.in  configure  configure.ac  libm.in.xml  libm.texinfo
msvclib/libm/machine/nds32/: Makefile.am  Makefile.in  configure  configure.ac
winsup/: acinclude.m4
winsup/CVSChangeLogs.old/: ChangeLog-2015
winsup/cygwin/: Makefile.am  ROADMAP  assert.cc  ctype.cc  dcrt0.cc  dir.cc  dll_init.h  environ.cc  errno.cc  exec.cc  fhandler.h  fhandler_cygdrive.cc  fhandler_dev.cc  fhandler_disk_file.cc  fhandler_proc.cc  fhandler_process.cc  fhandler_procsysvipc.cc  fhandler_registry.cc  fork.cc  heap.cc  how-startup-shutdown-works.txt  malloc_wrapper.cc  mktemp.cc  nlsfuncs.cc  spawn.cc  strfuncs.cc  syscalls.cc  wchar.h  winsup.h
winsup/doc/: faq-programming.xml  highlights.xml  intro.xml  overview.xml
(+597 files in other folders)
