dnl This is the msvclib/libc/sys/a29khif configure.in file.
dnl Process this file with autoconf to produce a configure script.

AC_PREREQ(2.59)
AC_INIT([msvclib],[MSVCLIB_VERSION])
AC_CONFIG_SRCDIR([_alloc.s])

dnl Can't be done in MSVCLIB_CONFIGURE because that confuses automake. 
AC_CONFIG_AUX_DIR(../../../..)

MSVCLIB_CONFIGURE(../../..)

AC_CONFIG_FILES(Makefile)
AC_OUTPUT
